# metar-server

./: LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
metar_server/: manage.py
metar_server/metar_server/: asgi.py  settings.py  urls.py  wsgi.py
metar_server/metarapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
metar_server/metarapp/management/commands/: fetchMetar.py
metar_server/metarapp/migrations/: 0001_initial.py
metar_server/metarapp/myfunction/: airport_function.py  metar_function.py
metar_server/metarapp/templates/admin/: base_site.html
metar_server/metarapp/templates/admin/metarapp/metar/: change_list.html  metar_manage_view.html
metar_server/metarapp/templates/metarapp/: base.html  index.html  login.html
tests/: test_metar_server.py
