[tool.poetry]
name = "metar-server"
version = "0.1.0"
description = ""
authors = ["bais_khi <connie_gmnt@live.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
requests = "^2.25.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pytest-django = "^4.1.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
